--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <h1>Hey There</h1>
+  <h1>Hello from nodeChatApp</h1>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
