--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
 
   </ol>
   <form action="" id="message-form">
-    <input type="text" name="message" placeholder="Message" />
+    <input type="text" name="message" placeholder="Message" autofocus autocomplete="off" />
     <button>Send</button>
   </form>
-  <button id="send-location">Send Location</button>
+  <button id="send-location">Send location</button>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.3.1.min.js"></script>
   <script src="/js/index.js"></script>
