Added mustache.js for message templates

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,32 @@
     <button>Send</button>
   </form>
   <button id="send-location">Send location</button>
+
+  <script id="message-template" type="text/template">
+    <li class="message">
+      <div class="messageTitle">
+        <h4>{{from}}</h4>
+        <span>{{createdAt}}</span>
+      </div>
+      <div class="messageBody">
+        <p>{{text}}</p>
+      </div>
+    </li>
+  </script>
+  <script id="location-message-template" type="text/template">
+    <li class="message">
+      <div class="messageTitle">
+        <h4>{{from}}</h4>
+        <span>{{createdAt}}</span>
+      </div>
+      <div class="messageBody">
+        <a href="{{url}}" target="_blank">My Current Location<a>
+      </div>
+    </li>
+  </script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/moment.js"></script>
+  <script src="/js/libs/mustache.js"></script>
   <script src="/js/index.js"></script>
 </body>
 
